<resources>
    <string name="app_name">Good Books</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Good Books</string>
    <string name="nav_header_subtitle">An app to organize books</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_books">Books</string>
    <string name="scan">Scan</string>
    <string name="title_label">Serientitel</string>
    <string name="part_label">Nummer</string>
    <string name="isbn_label">ISBN:</string>
    <string name="author_label">Autor:</string>
    <string name="author_label_2">Autor(en)</string>
    <string name="title_placeholder">Book Title</string>
    <string name="isbn_placeholder">isbn</string>
    <string name="author_placeholder">autor</string>
    <string name="bookCover">bookCover</string>
    <string name="books_placeholder">Keine Bücher vorhanden</string>
    <string name="deleteBtn">Lösche Bücher</string>
    <string name="synchronise">Sync</string>
    <string name="edit_title">Datensatz bearbeiten</string>
    <string name="saveChange">Übernehmen</string>
    <string name="deleteBook">Buch löschen</string>
    <string name="reset_image">Bild zurücksetzen</string>
    <string name="edit_book">Buch bearbeiten</string>
    <string name="change_picture_btn">Change picture</string>
    <string name="subtitle">Buchtitel</string>
    <string name="reload_uncompleted">Unvollständige Bücher laden</string>
    <string name="no_scanned_placeholder">Kein Buch eingescannt</string>
    <string name="book_already_in_list">Buch ist in der Liste</string>
    <string name="new_book">Neues Buch</string>
    <string name="add_book">Hinzufügen</string>
    <string name="menu_series">Serien</string>
    <string name="no_missing_books">Es fehlen keine Bücher</string>
</resources>