<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.bookdetail.BookDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="@dimen/parent_spacing"
            android:paddingEnd="@dimen/parent_spacing"
            android:paddingBottom="@dimen/parent_spacing">


        <include
                android:id="@+id/include_card"
                layout="@layout/book_detail_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/edits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_title"
                android:textSize="22sp"

                android:textStyle="bold"
                android:layout_marginTop="@dimen/parent_spacing"
                android:textColor="?attr/colorOnSecondary"
                app:layout_constraintTop_toBottomOf="@+id/include_card"
                app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_label"
                app:layout_constraintTop_toBottomOf="@+id/edits"
                android:layout_marginTop="@dimen/parent_spacing"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subtitleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subtitle"
                app:layout_constraintTop_toBottomOf="@+id/titleLayout"
                android:layout_marginTop="@dimen/input_spacing"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/partLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@+id/subtitleLayout"
                android:layout_marginTop="@dimen/input_spacing"
                app:errorEnabled="true">

            <EditText
                    android:id="@+id/editPart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:hint="@string/part_label"
                    android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/authorLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/author_label_2"
                app:layout_constraintTop_toBottomOf="@+id/partLayout"
                android:layout_marginTop="@dimen/input_spacing"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/submitChanges"
                android:text="@string/saveChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>